--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Premium Social - Ganhe Dinheiro Real</title>
   <meta name="description" content="Ganhe dinheiro promovendo redes sociais. Clientes compram seguidores e engajamento, você executa tarefas e recebe pagamento.">
-  <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>💎</text></svg>">
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800&display=swap" rel="stylesheet">
+  <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100
   <style>
     :root {
       --p-primary: #6366f1;
@@ -1320,4 +1319,5 @@ document.getElementById('pTasksCount').textContent = tasks.length;
     document.getElementById('userRegisterForm').onsubmit = (e) => pApp.registerUser(e);
   </script>
 </body>
+
 </html>
