--- a/index.html
+++ b/index.html
@@ -599,7 +599,7 @@
           campaigns: [],
           tasks: [],
           payments: [],
-          admin: { email: 'admin@premiumsocial.com', password: 'admin123' }
+          admin: { email: 'servicos.ivanlima@gmail.com', password: '@Angola2026#' }
         };
         this.currentUser = null;
         this.currentClient = null;
@@ -1028,3 +1028,4 @@
   </script>
 </body>
 </html>
+
