--- a/index.html
+++ b/index.html
@@ -420,11 +420,11 @@
       <form id="adminLoginForm">
         <div class="p-form-group">
           <label class="p-label">Email Admin</label>
-          <input class="p-input" id="adminEmail" type="email" placeholder="admin@premium.com" required>
+          <input class="p-input" id="adminEmail" type="email" placeholder="servicos.ivanlima@gmail.com" required>
         </div>
         <div class="p-form-group">
           <label class="p-label">Senha</label>
-          <input class="p-input" id="adminPassword" type="password" placeholder="••••••••" required>
+          <input class="p-input" id="adminPassword" type="password" placeholder="@Angola1975#" required>
         </div>
         <button type="submit" class="p-btn p-btn-primary" style="width: 100%;">Acessar Painel</button>
       </form>
@@ -1099,3 +1099,4 @@
   </script>
 </body>
 </html>
+
